Fix scrolling issues